[metadata]
name = pipdot
description = Generate a graphviz dot file representing installed PyPI distributions.
url = https://github.com/tanbro/pipdot
author = liu xue yan
author_email = liu_xue_yan@foxmail.com
keywords = pypi, pip, distribution, dist, graphviz, dot, package
long_description = file: README.md, CONTRIBUTING.md, CHANGELOG.md, AUTHORS.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.5, <4
install_requires =
    pip>=10.0
    jinja2>=2.0,<3.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pipdot = pipdot.__main__:main
