[metadata]
name = pipdot
description = Generate a graphviz dot file representing installed PyPI distributions.
url = https://github.com/tanbro/pipdot
author = liu xue yan
author_email = liu_xue_yan@foxmail.com
keywords = pypi, pip, distribution, dist, graph, graphviz, dot, package, dependency, dependency-graph
long_description = file: README.md, CONTRIBUTING.md, CHANGELOG.md, AUTHORS.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Topic :: Software Development
    Intended Audience :: Developers

[options]
package_dir =
    =src
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
install_requires =
    pip>=22.0
    Jinja2>=2.0,<4.0

[options.packages.find]
where = src

[options.package_data]
pipdot = templates/*

[options.entry_points]
console_scripts =
    pipdot = pipdot.__main__:main
