[metadata]
name = pipdot
description = Generate a graphviz dot file representing installed PyPI distributions.
url = https://github.com/tanbro/pipdot
author = liu xue yan
author_email = liu_xue_yan@foxmail.com
keywords = pypi, pip, distribution, dist, graph, graphviz, dot, package, dependency, dependency-graph
long_description = file: README.md, CONTRIBUTING.md, CHANGELOG.md, AUTHORS.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Topic :: Software Development
    Intended Audience :: Developers

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.8

[options.packages.find]
where = src

[options.package_data]
pipdot = templates/*

[options.entry_points]
console_scripts =
    pipdot = pipdot.__main__:main
